# nif

./: .aderc  .aderc-ci  .aderc-cuda  .aderc-cuda-galactic  .aderc-cuda-galactic-tracing  .aderc-galactic  .aderc-lgsvl  .bash_history  .bashrc  .gitignore  .gitmodules  CMakeLists.txt  IDE.md  README.md  adessh.sh  central-requirements.txt  default.rviz  docker-publish.yml  final_result.py  final_result_no_mission.py  getade.sh  moon_final_result.py  multidb3  nif  nif.foxy.repos  nif.galactic.repos  nif_image_build.sh  nif_volume_build.sh  nifbagplay  nifbuild  nifdeploy  nifdeploy.clustering  nifenv  nifformat  niflaunch  nifstart  niftest  nifupdate  setclion.sh  test  (+1 more)
docker/: Dockerfile  (+2 more)
src/carnival/eurecar_msgs/: CMakeLists.txt  package.xml
src/carnival/eurecar_msgs/msg/: CanInput.msg  ControlCmd.msg  FrenetPath.msg  NavigationEvaluation.msg  PathWTime.msg  PathWTimeArray.msg  PathWithCost.msg  PathWithCostArray.msg  VehicleSysControl.msg
src/common/nif_common_nodes/: CMakeLists.txt  package.xml
src/common/nif_common_nodes/config/: params.global.yaml
src/common/nif_common_nodes/design/: global_parameters_node.md  node_status_manager.md
src/common/nif_common_nodes/launch/: parameters.launch.py
src/common/nif_common_nodes/src/: BaseNode.cpp  global_parameters_main.cpp  i_base_node.cpp  i_base_synchronized_node.cpp  node_status.cpp  node_status_manager.cpp
src/common/nif_common_nodes/test/: base_node_test_node.h  test_base_node.cpp
src/common/nif_utils/: CMakeLists.txt  package.xml
src/common/nif_utils/lib/: Amathutils.cpp  README.md  butterworth_filter.cpp  kalman_filter.cpp  time_delay_kalman_filter.cpp
src/common/nif_utils/src/: PID.cpp  cubic_spliner.cpp  cubic_spliner_2D.cpp  frenet_path.cpp  frenet_path_generator.cpp  geodetic_converter.cpp  quartic_polynomial.cpp  quaternion.cpp  quintic_polynomial.cpp  utils.cpp
src/common/nif_utils/test/: test_utils_algebra.cpp  test_utils_coordinates.cpp  test_utils_geometry.cpp  test_utils_numeric.cpp  test_utils_polygon_helper.cpp  test_utils_time.cpp
src/control/nif_accel_control_nodes/: CMakeLists.txt  package.xml
src/control/nif_accel_control_nodes/config/: params.yaml
src/control/nif_accel_control_nodes/include/: ABS.hpp  TractionABS.hpp  accel_control.hpp  control_model.hpp
src/control/nif_accel_control_nodes/launch/: bag.launch.py  bag.launch_hk.py
src/control/nif_accel_control_nodes/src/: ABS.cpp  TractionABS.cpp  accel_control_node.cpp  control_model.cpp
src/control/nif_adaptive_cruise_control_node/: CMakeLists.txt  package.xml
src/control/nif_adaptive_cruise_control_node/config/: idm_acc_config.yaml  rosparam.yaml
src/control/nif_adaptive_cruise_control_node/include/: adaptive_cruise_node.hpp  idm.hpp
src/control/nif_adaptive_cruise_control_node/launch/: bag.launch.py  default.launch.py  deploy.launch.py  sim.launch.py
src/control/nif_adaptive_cruise_control_node/src/: adaptive_cruise_node.cpp  adaptive_cruise_node_main.cpp  idm.cpp
src/control/nif_control_joint_lqr_nodes/: CMakeLists.txt  package.xml
src/control/nif_control_joint_lqr_nodes/config/: deploy.params.yaml  imitative_closed_sim.params.yaml  plotjuggler_config_hk.xml  sim.params.yaml
src/control/nif_control_joint_lqr_nodes/launch/: bag.launch.py  bag.launch_hk.py  default.launch.py  deploy.launch.py  imitative_sim.launch.py  sim.launch.py
src/control/nif_control_joint_lqr_nodes/src/: control_lqr_camber_comp_node.cpp  control_lqr_main.cpp  control_lqr_node.cpp
src/control/nif_mpcc_nodes/: CMakeLists.txt  README.md  package.xml
src/control/nif_mpcc_nodes/include/: low_pass_filter.h
src/control/nif_mpcc_nodes/launch/: default.launch.py
src/control/nif_velocity_planning_node/: CMakeLists.txt  package.xml
src/control/nif_velocity_planning_node/launch/: bag.launch.py  bag.launch_hk.py  bag_bs.launch.py  deploy.launch.py
src/control/nif_velocity_planning_node/src/: nif_velocity_planning_main.cpp  nif_velocity_planning_node.cpp
src/control/nif_wall_following_controller/: CMakeLists.txt  package.xml
src/control/nif_wall_following_controller/config/: params.yaml
src/control/nif_wall_following_controller/src/: kin_control_node.cpp  nif_wall_following_controller_main.cpp
src/managers/nif_vehicle_dynamics_manager/: CMakeLists.txt  README.md  package.xml
src/managers/nif_vehicle_dynamics_manager/data/: test_3d_array.mat  visualize_engine_model.py
src/managers/nif_vehicle_dynamics_manager/src/: engine_manager.cpp  kalman.cpp  tire_manager.cpp
src/managers/nif_waypoint_manager_mission/: CMakeLists.txt  package.xml
src/managers/nif_waypoint_manager_mission/src/: waypoint_manager_mission.cpp  waypoint_manager_mission_v2.cpp
src/nif_common/nif_racing_line/: CMakeLists.txt  package.xml
src/nif_common/nif_racing_line/src/: racing_line_manager.cpp
src/perception/nif_aw_localization_bestgnss_nodes/: CMakeLists.txt  package.xml
src/perception/nif_aw_localization_bestgnss_nodes/config/: config_lvms.yaml
src/perception/nif_aw_localization_bestgnss_nodes/launch/: deploy.bg.launch.py  deploy.launch.py
src/perception/nif_aw_localization_bestgnss_nodes/lib/: Amathutils.cpp  butterworth_filter.cpp
src/perception/nif_aw_localization_bestgnss_nodes/src/: nif_aw_localization_bestgnss_node.cpp  nif_aw_localization_node.cpp  nif_aw_localization_nodes_main.cpp
src/perception/nif_aw_localization_nodes/: CMakeLists.txt  package.xml
src/perception/nif_costmap_generator/: CMakeLists.txt  package.xml
src/perception/nif_geofence_filter_nodes/: CMakeLists.txt  package.xml
src/perception/nif_ghost_vehicle_spawner_nodes/: CMakeLists.txt  package.xml
src/perception/nif_gpu_euclidean_clustering/: CMakeLists.txt  package.xml
src/perception/nif_localization_gtsam_nodes/: CMakeLists.txt  package.xml
src/perception/nif_localization_nodes/: CMakeLists.txt  package.xml
src/perception/nif_objects_tracker_nodes/: CMakeLists.txt  package.xml
src/perception/nif_opponent_prediction_nodes/: CMakeLists.txt  package.xml
src/waypoint_viz/: CMakeLists.txt  package.xml
src/waypoint_viz/src/: csv_viz_tool.cpp
(+25721 files in other folders)
