<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nif_common_nodes</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="af.andreafinazzi@gmail.com">usrg</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <depend>rclcpp</depend>
  <depend>raptor_dbw_msgs</depend>

  <depend>nif_common</depend>
  <depend>nif_utils</depend>
  <!-- TODO solve cross-dependancy -->
  <!-- <depend>nif_node_status_manager</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
