<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nif_accel_control_nodes</name>
  <version>0.0.0</version>
  <description>Longitudinal acceleration control node</description>
  <maintainer email="hynkis@kaist.ac.kr">Hyunki Seong</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>raptor_dbw_msgs</depend>
  <depend>deep_orange_msgs</depend>
  <depend>bvs_msgs</depend>
  <depend>launch_xml</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
