<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nif_control_joint_lqr_nodes</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jspisak@todo.todo">jspisak</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>nif_common</depend>
  <depend>nif_control_common_nodes</depend>

  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>novatel_oem7_msgs</depend>
  <depend>novatel_gps_msgs</depend>
  <depend>deep_orange_msgs</depend>
  <depend>raptor_dbw_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>nif_control_common</depend>


  <depend>libeigen3-dev</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
