<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nif_mpcc_nodes</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="seungwook1024@gmail.com">sw</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>raptor_dbw_msgs</depend>
  <depend>rviz_visual_tools</depend>
  <depend>nif_common_nodes</depend>

  <!-- <depend>Eigen3</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
