<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nif_velocity_planning_node</name>
  <version>0.0.0</version>
  <description>Velocity planner considering Tire dynamics, Curvature</description>
  <maintainer email="hynkis@kaist.ac.kr">usrg</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <depend>nif_common</depend>
  <depend>nif_common_nodes</depend>
  <depend>nif_utils</depend>
  <depend>nif_vehicle_dynamics_manager</depend>

  <depend>tf2</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>novatel_oem7_msgs</depend>
  <depend>deep_orange_msgs</depend>
  <depend>raptor_dbw_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
