<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nif_wall_following_controller</name>
  <version>0.0.0</version>
  <description>Lateral control node for simple GPS waypoint following</description>
  <maintainer email="wtb0012@auburn.edu">Will Bryan</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>raptor_dbw_msgs</depend>
  <depend>launch_xml</depend>
  <depend>deep_orange_msgs</depend>
  <depend>nif_common</depend>
  <depend>nif_common_nodes</depend>
  <depend>nif_control_common_nodes</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>