<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nif_aw_localization_nodes</name>
  <version>0.1.1</version>
  <description>Autoware localization package modification for IAC</description>
  <maintainer email="lee.dk@kaist.ac.kr">DaegyuLee</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ros_testing</test_depend>

  <depend>nif_common</depend>
  <depend>nif_msgs</depend>
  <depend>nif_utils</depend>
  <depend>nif_common_nodes</depend>
  <depend>nif_localization_minimal</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>novatel_oem7_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nif_frame_id</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
