<?xml version="1.0"?>
<package format="3">
  <name>nif_costmap_generator</name>
  <version>0.1.1</version>
  <description>The costmap_generator package</description>
  <maintainer email="lee.dk@kaist.ac.kr">DaegyuLee</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ros_testing</test_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>

  <depend>nif_common</depend>
  <depend>nif_utils</depend>
  <depend>nif_common_nodes</depend>
  <depend>nif_localization_minimal</depend>
  <depend>nif_frame_id</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
