<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nif_geofence_filter_nodes</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="af.andreafinazzi@gmail.com">Andrea Finazzi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nif_utils</depend>
  <depend>nif_msgs</depend>
  <depend>nif_common</depend>
  <depend>nif_waypoint_manager_minimal</depend>

  <depend>rclcpp</depend>
  
  <exec_depend>nif_waypoint_manager_nodes</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
