<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>nif_ghost_vehicle_spawner_nodes</name>
  <version>0.0.1</version>
  <description>NIF ghost vehiclle spawner</description>

  <maintainer email="finazzi@kaist.ac.kr">Andrea Finazzi - USRG @ KAIST</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>ament_index_cpp</depend>
  <depend>nif_waypoint_manager_minimal</depend>

  <exec_depend>nif_common_nodes</exec_depend>
  <!-- <exec_depend>nif_launch</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
