<?xml version="1.0"?>
<package format="3">
  <name>nif_gpu_euclidean_clustering</name>
  <version>0.1.1</version>
  <description>The nif_gpu_euclidean_clustering package</description>
  <maintainer email="lee.dk@kaist.ac.kr">DaegyuLee</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
